--- a/index.html
+++ b/index.html
@@ -59,20 +59,9 @@
         }
         .animate-marquee:hover { animation-play-state: paused; }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "framer-motion": "https://esm.sh/framer-motion@^11.0.0"
-  }
-}
-</script>
 </head>
 <body class="antialiased selection:bg-[#ccff00] selection:text-black overflow-hidden">
     <div id="root" class="h-full"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
